[gd_scene load_steps=5 format=3 uid="uid://cu721f35yc12a"]

[ext_resource type="Script" path="res://scripts/funny_guy.gd" id="1_ivana"]
[ext_resource type="PackedScene" uid="uid://d0inprstrdkpo" path="res://imports/funnyGuy/FunnyGuy.glb" id="2_6xpmo"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pu1e0"]
size = Vector3(33, 13, 18.9884)

[sub_resource type="BoxShape3D" id="BoxShape3D_5ej4m"]
size = Vector3(5.53412, 5.5318, 7.14542)

[node name="FunnyGuy" type="Node3D"]
script = ExtResource("1_ivana")

[node name="FunnyGuy" parent="." instance=ExtResource("2_6xpmo")]

[node name="Skeleton3D" parent="FunnyGuy/Armature" index="0"]
bones/1/position = Vector3(5.85309e-16, 2.636, 0.0745268)
bones/1/rotation = Quaternion(-0.707107, -9.35848e-24, 1.57009e-16, 0.707107)
bones/2/position = Vector3(-1.82354, 1.52133, -1.26159)
bones/2/rotation = Quaternion(0.996014, 2.12662e-08, -2.37468e-07, -0.089197)
bones/3/rotation = Quaternion(0.996014, 2.1266e-08, -2.37469e-07, 0.0891966)
bones/4/position = Vector3(1.19208e-07, 0.341503, 0.459332)
bones/7/rotation = Quaternion(-0.0910439, 1.8517e-13, 4.34131e-08, 0.995847)
bones/8/rotation = Quaternion(0.304412, -4.54872e-13, -1.45155e-07, 0.952541)
bones/9/rotation = Quaternion(0.02038, -2.86053e-14, -9.71792e-09, 0.999792)
bones/10/rotation = Quaternion(0.0322057, -0.323789, -0.579711, 0.747033)
bones/11/rotation = Quaternion(-0.636298, -0.021367, -0.25872, 0.726452)
bones/12/rotation = Quaternion(0.0260081, 0.389342, 0.536057, 0.748584)
bones/13/rotation = Quaternion(-0.975655, 0.0676323, 0.126259, 0.166078)
bones/14/position = Vector3(1.28394, 2.04145, -0.716855)
bones/14/rotation = Quaternion(0.14447, 0.615227, -0.241161, 0.736523)
bones/16/rotation = Quaternion(-0.0059047, 0.000625577, -0.000758563, 0.999982)
bones/19/position = Vector3(-2.27621, 1.8997, -0.739848)
bones/19/rotation = Quaternion(0.151712, -0.588189, 0.240608, 0.75705)
bones/21/rotation = Quaternion(-0.00590468, -0.000625566, 0.000758558, 0.999982)
bones/23/rotation = Quaternion(-0.029808, -0.00346946, -0.00773135, 0.99952)

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 8.9942)
shape = SubResource("BoxShape3D_pu1e0")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0093689, 2.7709, -3.50883)
shape = SubResource("BoxShape3D_5ej4m")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="FunnyGuy"]
